--- a/ShabuNow-nuxt/package.json
+++ b/ShabuNow-nuxt/package.json
@@ -27,11 +27,13 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
+    "axios": "^1.6.0",
+    "luxon": "^1.28.1",
     "nuxt-permissions": "^0.2.4",
     "pinia": "^2.1.7",
-    "pinia-plugin-persistedstate": "^3.2.0"
-  },
-  "overrides": {
-    "vue": "latest"
+    "pinia-plugin-persistedstate": "^3.2.0",
+    "vue-axios": "^3.5.2",
+    "vue-datetime": "^1.0.0-beta.14",
+    "weekstart": "^1.1.0"
   }
 }
